# repo-analyzer

./: .gitmodules  Cargo.toml  LICENSE  PUBLISHING.md  README.md  config.json.example  repo_analysis.html  repo_analysis.json  report.html  report.json
.github/workflows/: publish.yml
src/: analyzer.rs  cli.rs  config.rs  git.rs  lib.rs  main.rs  report.rs  s3.rs
