[package]
name = "repo-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A tool to analyze GitHub repositories"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
git2 = "0.18"
walkdir = "2.4"
regex = "1.10"
