[package]
name = "repo-analyzer"
version = "0.1.2"
edition = "2021"
authors = ["Gokhan Ozturk <gokhaanozturk@gmail.com>"]
description = "A tool to analyze GitHub repositories and generate detailed reports with S3 upload capability"
license = "MIT"
repository = "https://github.com/gokh4nozturk/repo-analyzer"
readme = "README.md"
keywords = ["git", "analysis", "repository", "code", "metrics"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "config.json",
    "report.html",
    "report.json",
    "repo_analysis.html",
    "repo_analysis.json",
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
git2 = "0.18"
walkdir = "2.4"
regex = "1.10"
rand = "0.8"
aws-config = "0.56"
aws-sdk-s3 = "0.34"
aws-types = "0.56"
